--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 				<div class="col-lg-12 text-center">
 					<div class="section-title">
 						<h2>Our Partners</h2>
-						<p>Mida sit una namet, cons uectetur adipiscing adon elit.</p>
+						<p>Brindamos soluciones en los diferentes mercados</p>
 					</div>
 				</div>
 			</div>
@@ -308,16 +308,10 @@
 					<div class="col-md-3">
 						<div class="team-item">
 							<div class="team-image">
-								<img src="images/demo/author-2.jpg" class="img-responsive" alt="author">
+								<img src="images/demo/linea_alimentos.jpg" class="img-responsive" alt="author">
 							</div>
 							<div class="team-text">
 								<h3>Línea de Alimentos</h3>
-								<p>PRODUCTOS PARA HIGIENE EN MANOS</p>
-								<p>DETERGENTES PARA SISTEMAS CIP</p>
-								<p>DETERGENTES PARA LIMPIEZA CON ESPUMA
-								<p>DESENGRASANTES</p>
-								<p>DESINFECTANTES</p>
-								</p>
 							</div>
 						</div>
 					</div>
@@ -327,7 +321,7 @@
 						<div class="team-item">
 							<a href="#" data-toggle="modal" data-target="#Modal-Cocina">
 							<div class="team-image">
-								<img src="images/demo/author-6.jpg" class="img-responsive" alt="author">
+								<img src="images/demo/linea_cocina.jpg" class="img-responsive" alt="author">
 							</div>
 							<div class="team-text">
 								<h3>Línea de Cocinas</h3>
@@ -339,7 +333,7 @@
 					<div class="col-md-3">
 						<div class="team-item">
 							<div class="team-image">
-								<img src="images/demo/author-4.jpg" class="img-responsive" alt="author">
+								<img src="images/demo/linea_institucional.jpg" class="img-responsive" alt="author">
 							</div>
 							<div class="team-text">
 								<h3>Línea Institucional</h3>
@@ -354,7 +348,7 @@
 					<div class="col-md-3">
 							<div class="team-item">
 								<div class="team-image">
-									<img src="images/demo/author-2.jpg" class="img-responsive" alt="author">
+									<img src="images/demo/linea_lavanderia.jpg" class="img-responsive" alt="author">
 								</div>
 								<div class="team-text">
 									<h3>Línea de Lavandería</h3>
@@ -371,7 +365,7 @@
 						<div class="col-md-3">
 							<div class="team-item">
 								<div class="team-image">
-									<img src="images/demo/author-6.jpg" class="img-responsive" alt="author">
+									<img src="images/demo/linea_automotriz.jpg" class="img-responsive" alt="author">
 								</div>
 								<div class="team-text">
 									<h3>Línea Automotriz</h3>
@@ -386,7 +380,7 @@
 						<div class="col-md-3">
 							<div class="team-item">
 								<div class="team-image">
-									<img src="images/demo/author-3.jpg" class="img-responsive" alt="author">
+									<img src="images/demo/linea_control.jpg" class="img-responsive" alt="author">
 								</div>
 								<div class="team-text">
 									<h3>Systema Control de Olor</h3>
@@ -401,7 +395,7 @@
 						<div class="col-md-3">
 							<div class="team-item">
 								<div class="team-image">
-									<img src="images/demo/author-4.jpg" class="img-responsive" alt="author">
+									<img src="images/demo/linea_cepillos.jpg" class="img-responsive" alt="author">
 								</div>
 								<div class="team-text">
 									<h3>Cepilleria</h3>
