--- a/index.html
+++ b/index.html
@@ -307,12 +307,13 @@
 					<!-- team member item -->
 					<div class="col-md-3">
 						<div class="team-item">
+							<a href="#" data-toggle="modal" data-target="#Modal-Alimentos">
 							<div class="team-image">
 								<img src="images/demo/linea_alimentos.jpg" class="img-responsive" alt="author">
 							</div>
 							<div class="team-text">
 								<h3>Línea de Alimentos</h3>
-							</div>
+							</div></a>
 						</div>
 					</div>
 					<!-- end team member item -->
@@ -449,6 +450,31 @@
 		</div>
 	</footer>
 
+	<!-- Modal for Líneas de Mercado -->
+
+	<div class="modal fade" id="Modal-Alimentos" tabindex="-1" role="dialog" aria-labelledby="Modal-label-6">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="Modal-label-6">Línea de Cocinas</h4>
+					</div>
+					<div class="modal-body">
+						
+						<div class="modal-works"><span>PRODUCTOS PARA HIGIENE EN MANOS</span>
+						<p>Shampoo liquido antibacterial sin aroma con humectantes.</p>
+						<p>Jabón en espuma con aroma. Acción antibacterial. Ideal para clientes en restaurantes.</p>
+						<p>Desinfectante en gel. No requiere enjuague.</p>
+						<span>Web Design</span></div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	
 	<!-- Modal for Líneas de Mercado -->
 
 	<div class="modal fade" id="Modal-Cocina" tabindex="-1" role="dialog" aria-labelledby="Modal-label-6">
