more modals/imgs

--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/demo/portfolio-1.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3211-1280x960.jpg" alt="img02" class="img-responsive" />
 									<figcaption>
-										<h2>Dean & Letter</h2>
-										<p>Branding, Design</p>
+										<!-- <h2>Dean & Letter</h2>
+										<p>Branding, Design</p> -->
 										<a href="#" data-toggle="modal" data-target="#Modal-1">View more</a>
 									</figcaption>
 								</figure>
@@ -334,10 +334,10 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/demo/portfolio-2.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3216-1280x960.jpg" alt="img02" class="img-responsive" />
 									<figcaption>
-										<h2>Startup Framework</h2>
-										<p>Branding, Web Design</p>
+										<!-- <h2>Startup Framework</h2>
+										<p>Branding, Web Design</p> -->
 										<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
 									</figcaption>
 								</figure>
@@ -348,10 +348,10 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/demo/portfolio-3.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3217-1280x960.jpg" alt="img02" class="img-responsive" />
 									<figcaption>
-										<h2>Lamp & Velvet</h2>
-										<p>Branding, Web Design</p>
+										<!-- <h2>Lamp & Velvet</h2>
+										<p>Branding, Web Design</p> -->
 										<a href="#" data-toggle="modal" data-target="#Modal-3">View more</a>
 									</figcaption>
 								</figure>
@@ -364,10 +364,10 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/demo/portfolio-4.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3219-1280x960.jpg" alt="img02" class="img-responsive" />
 									<figcaption>
-										<h2>Smart Name</h2>
-										<p>Branding, Design</p>
+										<!-- <h2>Smart Name</h2>
+										<p>Branding, Design</p> -->
 										<a href="#" data-toggle="modal" data-target="#Modal-4">View more</a>
 									</figcaption>
 								</figure>
@@ -378,10 +378,10 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/demo/portfolio-5.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3222-1280x960.jpg" alt="img02" class="img-responsive" />
 									<figcaption>
-										<h2>Fast People</h2>
-										<p>Branding, Web Design</p>
+										<!-- <h2>Fast People</h2>
+										<p>Branding, Web Design</p> -->
 										<a href="#" data-toggle="modal" data-target="#Modal-5">View more</a>
 									</figcaption>
 								</figure>
@@ -392,17 +392,105 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/demo/portfolio-2.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3227-1280x960.jpg" alt="img02" class="img-responsive" />
 									<figcaption>
-										<h2>Kites & Stars</h2>
-										<p>Branding, Web Design</p>
-										<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
+										<!-- <h2>Kites & Stars</h2>
+										<p>Branding, Web Design</p> -->
+										<a href="#" data-toggle="modal" data-target="#Modal-6">View more</a>
 									</figcaption>
 								</figure>
 							</div>
 						</div>
 						<!-- end portfolio item -->
 					</div>
+					<div class="row">
+							<!-- start portfolio item -->
+							<div class="col-md-4">
+								<div class="ot-portfolio-item">
+									<figure class="effect-bubba">
+										<img src="images/Productos_img/IMG_3228-1280x960.jpg" alt="img02" class="img-responsive" />
+										<figcaption>
+											<!-- <h2>Dean & Letter</h2>
+											<p>Branding, Design</p> -->
+											<a href="#" data-toggle="modal" data-target="#Modal-7">View more</a>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<!-- end portfolio item -->
+							<!-- start portfolio item -->
+							<div class="col-md-4">
+								<div class="ot-portfolio-item">
+									<figure class="effect-bubba">
+										<img src="images/Productos_img/IMG_3229-1280x960.jpg" alt="img02" class="img-responsive" />
+										<figcaption>
+											<!-- <h2>Startup Framework</h2>
+											<p>Branding, Web Design</p> -->
+											<a href="#" data-toggle="modal" data-target="#Modal-8">View more</a>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<!-- end portfolio item -->
+							<!-- start portfolio item -->
+							<div class="col-md-4">
+								<div class="ot-portfolio-item">
+									<figure class="effect-bubba">
+										<img src="images/Productos_img/IMG_3230-1280x960.jpg" alt="img02" class="img-responsive" />
+										<figcaption>
+											<!-- <h2>Lamp & Velvet</h2>
+											<p>Branding, Web Design</p> -->
+											<a href="#" data-toggle="modal" data-target="#Modal-9">View more</a>
+										</figcaption>
+									</figure>
+								</div>
+							</div>
+							<!-- end portfolio item -->
+						</div>
+						<div class="row">
+								<!-- start portfolio item -->
+								<div class="col-md-4">
+									<div class="ot-portfolio-item">
+										<figure class="effect-bubba">
+											<img src="images/Productos_img/IMG_3231-1280x960.jpg" alt="img02" class="img-responsive" />
+											<figcaption>
+												<!-- <h2>Dean & Letter</h2>
+												<p>Branding, Design</p> -->
+												<a href="#" data-toggle="modal" data-target="#Modal-10">View more</a>
+											</figcaption>
+										</figure>
+									</div>
+								</div>
+								<!-- end portfolio item -->
+								<!-- start portfolio item -->
+								<div class="col-md-4">
+									<div class="ot-portfolio-item">
+										<figure class="effect-bubba">
+											<img src="images/Productos_img/IMG_3233-1280x960.jpg" alt="img02" class="img-responsive" />
+											<figcaption>
+												<!-- <h2>Startup Framework</h2>
+												<p>Branding, Web Design</p> -->
+												<a href="#" data-toggle="modal" data-target="#Modal-11">View more</a>
+											</figcaption>
+										</figure>
+									</div>
+								</div>
+								<!-- end portfolio item -->
+								<!-- start portfolio item -->
+								<div class="col-md-4">
+									<div class="ot-portfolio-item">
+										<figure class="effect-bubba">
+											<img src="images/Productos_img/IMG_3223-1280x960.jpg" alt="img02" class="img-responsive" />
+											<figcaption>
+												<!-- <h2>Lamp & Velvet</h2>
+												<p>Branding, Web Design</p> -->
+												<a href="#" data-toggle="modal" data-target="#Modal-12">View more</a>
+											</figcaption>
+										</figure>
+									</div>
+								</div>
+								<!-- end portfolio item -->
+							</div>
 				</div><!-- end container -->
 			</section>
 
@@ -441,7 +529,7 @@
 	</p>
 	<footer>
 		<div class="container text-center">
-
+				Derechos de autor 2017 QPM QUIMICOS SA DE CV
 		</div>
 	</footer>
 
@@ -664,8 +752,6 @@
 		</div>
 	</div>
 
-	
-
 
 	<!-- Modal for portfolio item 1 -->
 	<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
@@ -677,7 +763,7 @@
 					<h4 class="modal-title" id="Modal-label-1">Dean & Letter</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/demo/portfolio-1.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3211-1280x960.jpg" alt="img01" class="img-responsive" />
 					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
 					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
@@ -697,7 +783,7 @@
 					<h4 class="modal-title" id="Modal-label-2">Startup Framework</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/demo/portfolio-2.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3216-1280x960.jpg" alt="img01" class="img-responsive" />
 					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
 					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
@@ -718,7 +804,7 @@
 					<h4 class="modal-title" id="Modal-label-3">Lamp & Velvet</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/demo/portfolio-3.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3217-1280x960.jpg" alt="img01" class="img-responsive" />
 					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
 					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
@@ -739,7 +825,7 @@
 					<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/demo/portfolio-4.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3219-1280x960.jpg" alt="img01" class="img-responsive" />
 					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
 					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
@@ -760,7 +846,7 @@
 					<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/demo/portfolio-5.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3222-1280x960.jpg" alt="img01" class="img-responsive" />
 					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
 					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
@@ -770,6 +856,152 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Modal for portfolio item 6 -->
+	<div class="modal fade" id="Modal-6" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="Modal-label-1">Dean & Letter</h4>
+					</div>
+					<div class="modal-body">
+						<img src="images/Productos_img/IMG_3227-1280x960.jpg" alt="img01" class="img-responsive" />
+						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Modal for portfolio item 7 -->
+		<div class="modal fade" id="Modal-7" tabindex="-1" role="dialog" aria-labelledby="Modal-label-2">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="Modal-label-2">Startup Framework</h4>
+					</div>
+					<div class="modal-body">
+						<img src="images/Productos_img/IMG_3228-1280x960.jpg" alt="img01" class="img-responsive" />
+						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<!-- Modal for portfolio item 8 -->
+		<div class="modal fade" id="Modal-8" tabindex="-1" role="dialog" aria-labelledby="Modal-label-3">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="Modal-label-3">Lamp & Velvet</h4>
+					</div>
+					<div class="modal-body">
+						<img src="images/Productos_img/IMG_3229-1280x960.jpg" alt="img01" class="img-responsive" />
+						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<!-- Modal for portfolio item 9 -->
+		<div class="modal fade" id="Modal-9" tabindex="-1" role="dialog" aria-labelledby="Modal-label-4">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
+					</div>
+					<div class="modal-body">
+						<img src="images/Productos_img/IMG_3230-1280x960.jpg" alt="img01" class="img-responsive" />
+						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	
+		<!-- Modal for portfolio item 10 -->
+		<div class="modal fade" id="Modal-10" tabindex="-1" role="dialog" aria-labelledby="Modal-label-5">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+								aria-hidden="true">&times;</span></button>
+						<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
+					</div>
+					<div class="modal-body">
+						<img src="images/Productos_img/IMG_3231-1280x960.jpg" alt="img01" class="img-responsive" />
+						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- Modal for portfolio item 11 -->
+		<div class="modal fade" id="Modal-11" tabindex="-1" role="dialog" aria-labelledby="Modal-label-4">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+									aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
+						</div>
+						<div class="modal-body">
+							<img src="images/Productos_img/IMG_3233-1280x960.jpg" alt="img01" class="img-responsive" />
+							<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+							<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		
+			<!-- Modal for portfolio item 12 -->
+			<div class="modal fade" id="Modal-12" tabindex="-1" role="dialog" aria-labelledby="Modal-label-5">
+				<div class="modal-dialog" role="document">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+									aria-hidden="true">&times;</span></button>
+							<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
+						</div>
+						<div class="modal-body">
+							<img src="images/Productos_img/IMG_3223-1280x960.jpg" alt="img01" class="img-responsive" />
+							<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
+							<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+						</div>
+					</div>
+				</div>
+			</div>
 
 	<!-- Bootstrap core JavaScript
 			================================================== -->
