--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<link rel="icon" href="favicon.ico">
-	<title>Q P M</title>
+	<title>Q P M Supplies</title>
 	<!-- Bootstrap core CSS -->
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -78,7 +78,7 @@
 						<img class="d-block w-100" src="images/demo/carousel2.jpg" alt="Second slide">
 					  </div>
 					  <div class="item">
-						<img class="d-block w-100" src="images/demo/carousel3.jpg" alt="Third slide">
+						<img class="d-block w-100" src="images/demo/carousel 4.jpg" alt="Third slide">
 					  </div>
 					</div>
 					<a class="carousel-control-prev" href="#carousel-main" role="button" data-slide="prev">
@@ -106,7 +106,7 @@
 							En <b>QPM</b> ayudamos a brindar planificación e informes de una manera 
 							que tenga sentido para usted y con resultados orientados al éxito. Para obtener más 
 							información o solicitar una consulta, 
-							llámenos hoy mismo al <b>8110920192.</b>			
+							llámenos hoy mismo al <b>811 092 0192.</b>			
 						</p>
 					</div>
 				</div>
@@ -324,7 +324,7 @@
 									<figcaption>
 										<!-- <h2>Dean & Letter</h2>
 										<p>Branding, Design</p> -->
-										<a href="#" data-toggle="modal" data-target="#Modal-1">View more</a>
+										<a href="#" data-toggle="modal" data-target="#Modal-1">Ver más</a>
 									</figcaption>
 								</figure>
 							</div>
@@ -338,7 +338,7 @@
 									<figcaption>
 										<!-- <h2>Startup Framework</h2>
 										<p>Branding, Web Design</p> -->
-										<a href="#" data-toggle="modal" data-target="#Modal-2">View more</a>
+										<a href="#" data-toggle="modal" data-target="#Modal-2">Ver más</a>
 									</figcaption>
 								</figure>
 							</div>
@@ -352,7 +352,7 @@
 									<figcaption>
 										<!-- <h2>Lamp & Velvet</h2>
 										<p>Branding, Web Design</p> -->
-										<a href="#" data-toggle="modal" data-target="#Modal-3">View more</a>
+										<a href="#" data-toggle="modal" data-target="#Modal-3">Ver más</a>
 									</figcaption>
 								</figure>
 							</div>
@@ -368,7 +368,7 @@
 									<figcaption>
 										<!-- <h2>Smart Name</h2>
 										<p>Branding, Design</p> -->
-										<a href="#" data-toggle="modal" data-target="#Modal-4">View more</a>
+										<a href="#" data-toggle="modal" data-target="#Modal-4">Ver más</a>
 									</figcaption>
 								</figure>
 							</div>
@@ -382,7 +382,7 @@
 									<figcaption>
 										<!-- <h2>Fast People</h2>
 										<p>Branding, Web Design</p> -->
-										<a href="#" data-toggle="modal" data-target="#Modal-5">View more</a>
+										<a href="#" data-toggle="modal" data-target="#Modal-5">Ver más</a>
 									</figcaption>
 								</figure>
 							</div>
@@ -396,7 +396,7 @@
 									<figcaption>
 										<!-- <h2>Kites & Stars</h2>
 										<p>Branding, Web Design</p> -->
-										<a href="#" data-toggle="modal" data-target="#Modal-6">View more</a>
+										<a href="#" data-toggle="modal" data-target="#Modal-6">Ver más</a>
 									</figcaption>
 								</figure>
 							</div>
@@ -412,7 +412,7 @@
 										<figcaption>
 											<!-- <h2>Dean & Letter</h2>
 											<p>Branding, Design</p> -->
-											<a href="#" data-toggle="modal" data-target="#Modal-7">View more</a>
+											<a href="#" data-toggle="modal" data-target="#Modal-7">Ver más</a>
 										</figcaption>
 									</figure>
 								</div>
@@ -426,7 +426,7 @@
 										<figcaption>
 											<!-- <h2>Startup Framework</h2>
 											<p>Branding, Web Design</p> -->
-											<a href="#" data-toggle="modal" data-target="#Modal-8">View more</a>
+											<a href="#" data-toggle="modal" data-target="#Modal-8">Ver más</a>
 										</figcaption>
 									</figure>
 								</div>
@@ -440,7 +440,7 @@
 										<figcaption>
 											<!-- <h2>Lamp & Velvet</h2>
 											<p>Branding, Web Design</p> -->
-											<a href="#" data-toggle="modal" data-target="#Modal-9">View more</a>
+											<a href="#" data-toggle="modal" data-target="#Modal-9">Ver más</a>
 										</figcaption>
 									</figure>
 								</div>
@@ -456,7 +456,7 @@
 											<figcaption>
 												<!-- <h2>Dean & Letter</h2>
 												<p>Branding, Design</p> -->
-												<a href="#" data-toggle="modal" data-target="#Modal-10">View more</a>
+												<a href="#" data-toggle="modal" data-target="#Modal-10">Ver más</a>
 											</figcaption>
 										</figure>
 									</div>
@@ -470,7 +470,7 @@
 											<figcaption>
 												<!-- <h2>Startup Framework</h2>
 												<p>Branding, Web Design</p> -->
-												<a href="#" data-toggle="modal" data-target="#Modal-11">View more</a>
+												<a href="#" data-toggle="modal" data-target="#Modal-11">Ver más</a>
 											</figcaption>
 										</figure>
 									</div>
@@ -484,7 +484,7 @@
 											<figcaption>
 												<!-- <h2>Lamp & Velvet</h2>
 												<p>Branding, Web Design</p> -->
-												<a href="#" data-toggle="modal" data-target="#Modal-12">View more</a>
+												<a href="#" data-toggle="modal" data-target="#Modal-12">Ver más</a>
 											</figcaption>
 										</figure>
 									</div>
@@ -529,7 +529,7 @@
 	</p>
 	<footer>
 		<div class="container text-center">
-				Derechos de autor 2017 QPM QUIMICOS SA DE CV
+				Derechos de autor 2019 QPM Supplies SA DE CV
 		</div>
 	</footer>
 
@@ -760,12 +760,10 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-1">Dean & Letter</h4>
+					<h4 class="modal-title" id="Modal-label-1">ALK 9</h4>
 				</div>
 				<div class="modal-body">
 					<img src="images/Productos_img/IMG_3211-1280x960.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -780,12 +778,10 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-2">Startup Framework</h4>
+					<h4 class="modal-title" id="Modal-label-2">DEGRAS</h4>
 				</div>
 				<div class="modal-body">
 					<img src="images/Productos_img/IMG_3216-1280x960.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -801,12 +797,10 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-3">Lamp & Velvet</h4>
+					<h4 class="modal-title" id="Modal-label-3">AD-S</h4>
 				</div>
 				<div class="modal-body">
 					<img src="images/Productos_img/IMG_3217-1280x960.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -822,12 +816,10 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
+					<h4 class="modal-title" id="Modal-label-4">FRESHER</h4>
 				</div>
 				<div class="modal-body">
 					<img src="images/Productos_img/IMG_3219-1280x960.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -843,12 +835,10 @@
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 							aria-hidden="true">&times;</span></button>
-					<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
+					<h4 class="modal-title" id="Modal-label-5">HEAVY DUTY BAC</h4>
 				</div>
 				<div class="modal-body">
 					<img src="images/Productos_img/IMG_3222-1280x960.jpg" alt="img01" class="img-responsive" />
-					<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-					<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -864,12 +854,10 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 								aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="Modal-label-1">Dean & Letter</h4>
+						<h4 class="modal-title" id="Modal-label-1">CRUST-ER</h4>
 					</div>
 					<div class="modal-body">
 						<img src="images/Productos_img/IMG_3227-1280x960.jpg" alt="img01" class="img-responsive" />
-						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -884,12 +872,10 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 								aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="Modal-label-2">Startup Framework</h4>
+						<h4 class="modal-title" id="Modal-label-2">DETER 10</h4>
 					</div>
 					<div class="modal-body">
 						<img src="images/Productos_img/IMG_3228-1280x960.jpg" alt="img01" class="img-responsive" />
-						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -905,12 +891,10 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 								aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="Modal-label-3">Lamp & Velvet</h4>
+						<h4 class="modal-title" id="Modal-label-3">Biosan 6</h4>
 					</div>
 					<div class="modal-body">
 						<img src="images/Productos_img/IMG_3229-1280x960.jpg" alt="img01" class="img-responsive" />
-						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -926,12 +910,10 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 								aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
+						<h4 class="modal-title" id="Modal-label-4">DET-ADS-CRUST</h4>
 					</div>
 					<div class="modal-body">
 						<img src="images/Productos_img/IMG_3230-1280x960.jpg" alt="img01" class="img-responsive" />
-						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -947,12 +929,10 @@
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 								aria-hidden="true">&times;</span></button>
-						<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
+						<h4 class="modal-title" id="Modal-label-5">CONJUNTO</h4>
 					</div>
 					<div class="modal-body">
 						<img src="images/Productos_img/IMG_3231-1280x960.jpg" alt="img01" class="img-responsive" />
-						<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-						<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -968,12 +948,10 @@
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 									aria-hidden="true">&times;</span></button>
-							<h4 class="modal-title" id="Modal-label-4">Smart Name</h4>
+							<h4 class="modal-title" id="Modal-label-4">SHAMPOOS</h4>
 						</div>
 						<div class="modal-body">
 							<img src="images/Productos_img/IMG_3233-1280x960.jpg" alt="img01" class="img-responsive" />
-							<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-							<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -989,12 +967,10 @@
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 									aria-hidden="true">&times;</span></button>
-							<h4 class="modal-title" id="Modal-label-5">Fast People</h4>
+							<h4 class="modal-title" id="Modal-label-5">GLASS BIO</h4>
 						</div>
 						<div class="modal-body">
 							<img src="images/Productos_img/IMG_3223-1280x960.jpg" alt="img01" class="img-responsive" />
-							<div class="modal-works"><span>Branding</span><span>Web Design</span></div>
-							<p>Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe</p>
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
