--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top"><img src="images/logo.png"
+				<a class="navbar-brand page-scroll" href="#page-top"><img src="images/qpm-2.png"
 						alt="Lattes theme logo"></a>
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
