--- a/public/index.html
+++ b/public/index.html
@@ -763,7 +763,7 @@
 					<h4 class="modal-title" id="Modal-label-1">ALK 9</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/Productos_img/IMG_3211-1280x960.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3211-1280x960.png" alt="img01" class="img-responsive" />
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -781,7 +781,7 @@
 					<h4 class="modal-title" id="Modal-label-2">DEGRAS</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/Productos_img/IMG_3216-1280x960.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3216-1280x960.png" alt="img01" class="img-responsive" />
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -800,7 +800,7 @@
 					<h4 class="modal-title" id="Modal-label-3">AD-S</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/Productos_img/IMG_3217-1280x960.jpg" alt="img01" class="img-responsive"/>
+					<img src="images/Productos_img/IMG_3217-1280x960.png" alt="img01" class="img-responsive"/>
 					
 					<p>Es un aditivo sintético líquido para enjuagar loza de vidrio, plástico y porcelana o plata. 
 					   Desarrollado para acelerar el secado sin dejar ningún residuo como manchas o vetas. 
@@ -824,7 +824,7 @@
 					<h4 class="modal-title" id="Modal-label-4">FRESHER</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/Productos_img/IMG_3219-1280x960.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3219-1280x960.png" alt="img01" class="img-responsive" />
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -843,7 +843,7 @@
 					<h4 class="modal-title" id="Modal-label-5">HEAVY DUTY BAC</h4>
 				</div>
 				<div class="modal-body">
-					<img src="images/Productos_img/IMG_3222-1280x960.jpg" alt="img01" class="img-responsive" />
+					<img src="images/Productos_img/IMG_3222-1280x960.png" alt="img01" class="img-responsive" />
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -862,7 +862,7 @@
 						<h4 class="modal-title" id="Modal-label-1">CRUST-ER</h4>
 					</div>
 					<div class="modal-body">
-						<img src="images/Productos_img/IMG_3227-1280x960.jpg" alt="img01" class="img-responsive"/>
+						<img src="images/Productos_img/IMG_3227-1280x960.png" alt="img01" class="img-responsive"/>
 						<p>Es un líquido claro concentrado, especial para remover incrustaciones de sales duras del 
 						   agua y escorias en metales. Contiene surfactantes y emulsificadores que remueven las 
 						   incrustaciones y otros depósitos difíciles. Su baja espuma hace más rápida la limpieza.
@@ -884,7 +884,7 @@
 						<h4 class="modal-title" id="Modal-label-2">DETER 10</h4>
 					</div>
 					<div class="modal-body">
-						<img src="images/Productos_img/IMG_3228-1280x960.jpg" alt="img01" class="img-responsive" />
+						<img src="images/Productos_img/IMG_3228-1280x960.png" alt="img01" class="img-responsive" />
 						
 						<p>Es un detergente líquido alcalino para ser usado en máquinas de lavado de loza. 
 						   Asegura la obtención de cubiertos y loza brillantes por su alta capacidad de remoción 
@@ -908,7 +908,7 @@
 						<h4 class="modal-title" id="Modal-label-3">Biosan 6</h4>
 					</div>
 					<div class="modal-body">
-						<img src="images/Productos_img/IMG_3229-1280x960.jpg" alt="img01" class="img-responsive" />
+						<img src="images/Productos_img/IMG_3229-1280x960.png" alt="img01" class="img-responsive" />
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -927,7 +927,7 @@
 						<h4 class="modal-title" id="Modal-label-4">DET-ADS-CRUST</h4>
 					</div>
 					<div class="modal-body">
-						<img src="images/Productos_img/IMG_3230-1280x960.jpg" alt="img01" class="img-responsive" />
+						<img src="images/Productos_img/IMG_3230-1280x960.png" alt="img01" class="img-responsive" />
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -946,7 +946,7 @@
 						<h4 class="modal-title" id="Modal-label-5">CONJUNTO</h4>
 					</div>
 					<div class="modal-body">
-						<img src="images/Productos_img/IMG_3231-1280x960.jpg" alt="img01" class="img-responsive" />
+						<img src="images/Productos_img/IMG_3231-1280x960.png" alt="img01" class="img-responsive" />
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -965,7 +965,7 @@
 							<h4 class="modal-title" id="Modal-label-4">SHAMPOOS</h4>
 						</div>
 						<div class="modal-body">
-							<img src="images/Productos_img/IMG_3233-1280x960.jpg" alt="img01" class="img-responsive" />
+							<img src="images/Productos_img/IMG_3233-1280x960.png" alt="img01" class="img-responsive" />
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
@@ -984,7 +984,7 @@
 							<h4 class="modal-title" id="Modal-label-5">GLASS BIO</h4>
 						</div>
 						<div class="modal-body">
-							<img src="images/Productos_img/IMG_3223-1280x960.jpg" alt="img01" class="img-responsive" />
+							<img src="images/Productos_img/IMG_3223-1280x960.png" alt="img01" class="img-responsive" />
 						</div>
 						<div class="modal-footer">
 							<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
