--- a/public/index.html
+++ b/public/index.html
@@ -320,7 +320,7 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/Productos_img/IMG_3211-1280x960.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3211-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Dean & Letter</h2>
 										<p>Branding, Design</p> -->
@@ -334,7 +334,7 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/Productos_img/IMG_3216-1280x960.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3216-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Startup Framework</h2>
 										<p>Branding, Web Design</p> -->
@@ -348,7 +348,7 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/Productos_img/IMG_3217-1280x960.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3217-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Lamp & Velvet</h2>
 										<p>Branding, Web Design</p> -->
@@ -364,7 +364,7 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/Productos_img/IMG_3219-1280x960.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3219-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Smart Name</h2>
 										<p>Branding, Design</p> -->
@@ -378,7 +378,7 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/Productos_img/IMG_3222-1280x960.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3222-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Fast People</h2>
 										<p>Branding, Web Design</p> -->
@@ -392,7 +392,7 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
-									<img src="images/Productos_img/IMG_3227-1280x960.jpg" alt="img02" class="img-responsive" />
+									<img src="images/Productos_img/IMG_3227-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Kites & Stars</h2>
 										<p>Branding, Web Design</p> -->
@@ -408,7 +408,7 @@
 							<div class="col-md-4">
 								<div class="ot-portfolio-item">
 									<figure class="effect-bubba">
-										<img src="images/Productos_img/IMG_3228-1280x960.jpg" alt="img02" class="img-responsive" />
+										<img src="images/Productos_img/IMG_3228-1280x960.png" alt="img02" class="img-responsive" />
 										<figcaption>
 											<!-- <h2>Dean & Letter</h2>
 											<p>Branding, Design</p> -->
@@ -422,7 +422,7 @@
 							<div class="col-md-4">
 								<div class="ot-portfolio-item">
 									<figure class="effect-bubba">
-										<img src="images/Productos_img/IMG_3229-1280x960.jpg" alt="img02" class="img-responsive" />
+										<img src="images/Productos_img/IMG_3229-1280x960.png" alt="img02" class="img-responsive" />
 										<figcaption>
 											<!-- <h2>Startup Framework</h2>
 											<p>Branding, Web Design</p> -->
@@ -436,7 +436,7 @@
 							<div class="col-md-4">
 								<div class="ot-portfolio-item">
 									<figure class="effect-bubba">
-										<img src="images/Productos_img/IMG_3230-1280x960.jpg" alt="img02" class="img-responsive" />
+										<img src="images/Productos_img/IMG_3230-1280x960.png" alt="img02" class="img-responsive" />
 										<figcaption>
 											<!-- <h2>Lamp & Velvet</h2>
 											<p>Branding, Web Design</p> -->
@@ -452,7 +452,7 @@
 								<div class="col-md-4">
 									<div class="ot-portfolio-item">
 										<figure class="effect-bubba">
-											<img src="images/Productos_img/IMG_3231-1280x960.jpg" alt="img02" class="img-responsive" />
+											<img src="images/Productos_img/IMG_3231-1280x960.png" alt="img02" class="img-responsive" />
 											<figcaption>
 												<!-- <h2>Dean & Letter</h2>
 												<p>Branding, Design</p> -->
@@ -466,7 +466,7 @@
 								<div class="col-md-4">
 									<div class="ot-portfolio-item">
 										<figure class="effect-bubba">
-											<img src="images/Productos_img/IMG_3233-1280x960.jpg" alt="img02" class="img-responsive" />
+											<img src="images/Productos_img/IMG_3233-1280x960.png" alt="img02" class="img-responsive" />
 											<figcaption>
 												<!-- <h2>Startup Framework</h2>
 												<p>Branding, Web Design</p> -->
@@ -480,7 +480,7 @@
 								<div class="col-md-4">
 									<div class="ot-portfolio-item">
 										<figure class="effect-bubba">
-											<img src="images/Productos_img/IMG_3223-1280x960.jpg" alt="img02" class="img-responsive" />
+											<img src="images/Productos_img/IMG_3223-1280x960.png" alt="img02" class="img-responsive" />
 											<figcaption>
 												<!-- <h2>Lamp & Velvet</h2>
 												<p>Branding, Web Design</p> -->
