--- a/public/index.html
+++ b/public/index.html
@@ -320,6 +320,50 @@
 						<div class="col-md-4">
 							<div class="ot-portfolio-item">
 								<figure class="effect-bubba">
+									<img src="images/Productos_img/IMG_4001.png" alt="img02" class="img-responsive" />
+									<figcaption>
+										<!-- <h2>Dean & Letter</h2>
+										<p>Branding, Design</p> -->
+										<a href="#" data-toggle="modal" data-target="#Modal-13">Ver más</a>
+									</figcaption>
+								</figure>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- start portfolio item -->
+						<div class="col-md-4">
+							<div class="ot-portfolio-item">
+								<figure class="effect-bubba">
+									<img src="images/Productos_img/IMG_4002.png" alt="img02" class="img-responsive" />
+									<figcaption>
+										<!-- <h2>Startup Framework</h2>
+										<p>Branding, Web Design</p> -->
+										<a href="#" data-toggle="modal" data-target="#Modal-14">Ver más</a>
+									</figcaption>
+								</figure>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+						<!-- start portfolio item -->
+						<div class="col-md-4">
+							<div class="ot-portfolio-item">
+								<figure class="effect-bubba">
+									<img src="images/Productos_img/IMG_4003.png" alt="img02" class="img-responsive" />
+									<figcaption>
+										<!-- <h2>Lamp & Velvet</h2>
+										<p>Branding, Web Design</p> -->
+										<a href="#" data-toggle="modal" data-target="#Modal-15">Ver más</a>
+									</figcaption>
+								</figure>
+							</div>
+						</div>
+						<!-- end portfolio item -->
+					</div>
+					<div class="row">
+						<!-- start portfolio item -->
+						<div class="col-md-4">
+							<div class="ot-portfolio-item">
+								<figure class="effect-bubba">
 									<img src="images/Productos_img/IMG_3211-1280x960.png" alt="img02" class="img-responsive" />
 									<figcaption>
 										<!-- <h2>Dean & Letter</h2>
@@ -753,6 +797,61 @@
 	</div>
 
 
+	<!-- Modal for portfolio item 13 -->
+	<div class="modal fade" id="Modal-13" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+							aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="Modal-label-1">RIVERS</h4>
+				</div>
+				<div class="modal-body">
+					<img src="images/Productos_img/IMG_4001.png" alt="img01" class="img-responsive" />
+					<p>Rivers es un spray antibacterial para limpiar superficies como tu tu teléfono, el volante del carro, perillas, etc.</p>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Modal for portfolio item 14 -->
+	<div class="modal fade" id="Modal-14" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+							aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="Modal-label-1">OXI GEL</h4>
+				</div>
+				<div class="modal-body">
+					<img src="images/Productos_img/IMG_4002.png" alt="img01" class="img-responsive" />
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Modal for portfolio item 15 -->
+	<div class="modal fade" id="Modal-15" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+							aria-hidden="true">&times;</span></button>
+					<h4 class="modal-title" id="Modal-label-1">BACTER QUAT</h4>
+				</div>
+				<div class="modal-body">
+					<img src="images/Productos_img/IMG_4003.png" alt="img01" class="img-responsive" />
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+				</div>
+			</div>
+		</div>
+	</div>
 	<!-- Modal for portfolio item 1 -->
 	<div class="modal fade" id="Modal-1" tabindex="-1" role="dialog" aria-labelledby="Modal-label-1">
 		<div class="modal-dialog" role="document">
