--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,9 @@
 					<li>
 						<a class="page-scroll" href="#contact">Contacto</a>
 					</li>
+					<li>
+						<a href="../public/images/cepilleria_productos.pdf" target="_blank">Catálogo</a>
+					</li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
