--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
 						<a class="page-scroll" href="#contact">Contacto</a>
 					</li>
 					<li>
-						<a href="../public/images/cepilleria_productos.pdf" target="_blank">Catálogo</a>
+						<a href="images/cepilleria_productos.pdf" target="_blank">Catálogo</a>
 					</li>
 				</ul>
 			</div>
