--- a/public/index.html
+++ b/public/index.html
@@ -1008,7 +1008,7 @@
 						<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
 								aria-hidden="true">&times;</span></button>
 						<h4 class="modal-title" id="Modal-label-2">DETER 10</h4>
-						<p><p>Es un detergente líquido alcalino para ser usado en máquinas de lavado de loza. 
+						<p>Es un detergente líquido alcalino para ser usado en máquinas de lavado de loza. 
 							Asegura la obtención de cubiertos y loza brillantes por su alta capacidad de remoción 
 							de mugres en suspensión. Contiene materiales alcalinos, secuestrantes y humectantes.</p></p>
 					</div>
