--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,11 @@
 		<!-- /.container -->
 	</section>
 
+	
+	<img class="info-img-flyer1" src="images/demo/Flyer001.jpg">
+	<img class="info-img-flyer2" src="images/demo/Flyer002.jpg">
+	
+
 	<section class="overlay-dark bg-img1 dark-bg short-section">
 		<div class="container text-center">
 			<div class="row">
