--- a/public/index.html
+++ b/public/index.html
@@ -564,7 +564,7 @@
 					<h3>Direccion</h3>
 					<p>Rio Aguanal 2207-A Col. México, Monterrey, NL. C.P. 64740</p>
 					<p><i class="fa fa-phone"></i> (81) 1092 0192</p>
-					<p><i class="fa fa-envelope"></i> contactoqpm@gmail.com</p>
+					<p><i class="fa fa-envelope"></i> contacto@qpmsupplies.com</p>
 				</div>
 				<div class="col-md-3">
 					<h3>Horario de Servicio</h3>
@@ -583,7 +583,7 @@
 	</p>
 	<footer>
 		<div class="container text-center">
-				Derechos de autor 2020 QPM Supplies SA DE CV
+				Derechos de autor 2021 QPM Supplies SA DE CV
 		</div>
 	</footer>
 
